# ml-crash-course

./: README.md  main.py  pyproject.toml
src/: binary-classification.py  dataset-bad-parts.py  dataset-stats.py  linear-regression.py
