[project]
name = "ml-crash-course"
version = "0.1.0"
description = "Machine Learning Crash Course by Google"
url = "https://developers.google.com/machine-learning/crash-course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-ml-edu==0.1.3",
    "keras~=3.8.0",
    "matplotlib~=3.10.0",
    "numpy~=2.0.0",
    "pandas~=2.2.0",
    "plotly>=6.4.0",
    "tensorflow~=2.18.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
